Reverted asm and antlr cleanups